Sort data with headers

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,44 +1,57 @@
-<div class="flex justify-center mt-20">
+<div class="flex justify-center mt-20 overflow-x-scroll">
  <div class="px-4 sm:px-6 lg:px-8">
   <div class="sm:flex sm:items-center">
     <div class="sm:flex-auto">
-      <h1 class="text-base font-semibold leading-6 text-gray-900">Users</h1>
-      <p class="mt-2 text-sm text-gray-700">A list of all the users in your account including their name, title, email and role.</p>
-    </div>
-    <div class="mt-4 sm:ml-16 sm:mt-0 sm:flex-none">
-      <button type="button" class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add user</button>
+      <h1 class="text-base font-semibold leading-6 text-gray-900">Domains Count with Tags </h1>
+      <p class="mt-2 text-sm text-gray-700"> In order to sort each column, please click headers! </p>
     </div>
   </div>
   <div class="mt-8 flow-root">
     <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
       <div class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8">
-        <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 sm:rounded-lg">
-<table class="min-w-full divide-y divide-gray-300">
-  <thead class="bg-gray-50">
-    <tr>
-      <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Url's (<%= @sorted_website_names_with_tags.size %>)</th>
-      <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Count</th>
-      <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Tags</th>
-    </tr>
-  </thead>
-  <tbody class="divide-y divide-gray-200 bg-white">
-    <% @sorted_website_names_with_tags.each do |website_name, tags_tally| %>
-      <tr>
-        <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6"><%= website_name %></td>
-        <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6"><%= tags_tally.values.sum %></td>
-        <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">
-          <% tags_tally.each do |tag, count| %>
-            <%= "#{tag} (#{count})" %><br>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 sm:rounded-lg overflow-x-scroll overflow-y-scroll">
+          <table class="min-w-full divide-y divide-gray-300 overflow-x-scroll">
+           <thead class="bg-gray-50">
+  <tr>
+    <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">
+      <%= link_to "Url's (#{@sorted_website_names_with_tags.size})", {sort_by: 'website_name', direction: params[:direction] == 'asc' ? 'desc' : 'asc'} %>
+    </th>
+    <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
+      <%= link_to "Count", {sort_by: 'count', direction: params[:direction] == 'asc' ? 'desc' : 'asc'} %>
+    </th>
+    <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
+      <%= link_to "Tags", {sort_by: 'tags', direction: params[:direction] == 'asc' ? 'desc' : 'asc'} %>
+    </th>
+  </tr>
+</thead>
 
+            <tbody class="divide-y divide-gray-200 bg-white">
+              <% @sorted_website_names_with_tags.each do |website_name, tags_tally| %>
+                <tr>
+                  <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6"><%= website_name %></td>
+                  <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6"><%= tags_tally.values.sum %></td>
+                  <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">
+                    <% tags_tally.each do |tag, _ | %>
+                      <%= "#{tag}" %><br>
+                    <% end %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
   </div>
  </div>
 </div>
+
+<%# bar chart  %>
+
+<%# Table (All bookmarks data, sortear created_at, number of tags, y alphabetical domains)%>
+
+<%# line chart donde muestre por el timestamp %>
+
+<%# pie char de private%>
+
+<%# pie char de red%>
