Add button to download database as CSV file

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,7 @@
     <div class="sm:flex-auto">
       <h1 class="text-base font-semibold leading-6 text-gray-900">Domains Count with Tags </h1>
       <p class="mt-2 text-sm text-gray-700"> In order to sort each column, please click headers! </p>
+      <%= link_to "Exportar a CSV", export_csv_bookmarks_path, id: "export-csv" %>
     </div>
   </div>
   <div class="mt-8 flow-root">
