Add style in csv button and add bookmarks_data.json

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,8 @@
     <div class="sm:flex sm:items-center">
       <div class="sm:flex-auto">
         <h1 class="text-base font-semibold leading-6 text-gray-900">Domains Count with Tags </h1>
-        <p class="mt-2 text-sm text-gray-700"> In order to sort each column, please click headers! </p>
-        <%= link_to "Exportar a CSV", export_csv_bookmarks_path, id: "export-csv" %>
+        <p class="mt-2 text-sm text-gray-700 mb-10 "> In order to sort each column, please click headers! </p>
+        <%= link_to "Export to CSV", export_csv_bookmarks_path, id: "export-csv", class:"rounded-full bg-sky-300 p-2 text-white" %>
       </div>
     </div>
     <div class="mt-8 flow-root">
