--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,12 @@
+<button data-action="click->modal#show">Open Modal</button>
+
+<div data-controller="modal" style="display: none;">
+  <div data-modal-target="content">
+    <turbo-frame id="modal_frame" src="/modal_content"></turbo-frame>
+    <button data-action="click->modal#hide">Close Modal</button>
+  </div>
+</div>
+
 <div class="flex justify-center mt-20">
   <div class="px-4 sm:px-6 lg:px-8">
     <div class="sm:flex sm:items-center">
